--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,6 +15,9 @@ body {
   padding: 10px;
   display: grid;
   width: 100;
+  box-shadow: 0 0 30px;
+  background-color: #f5f5f5;
+
   grid-template: 1fr 8fr/ 1fr;
   grid-template-areas:
     "header"
